Add 'topology' option and startup command
Signed-off-by: Bogdan Shchogolev <bogdan993000@gmail.com>

--- a/server.conf
+++ b/server.conf
@@ -270,3 +270,6 @@ verb 3
 # Notify the client that when the server restarts so it
 # can automatically reconnect.
 explicit-exit-notify 1
+
+
+topology subnet
