Implement client file generation
Signed-off-by: Bogdan Shchogolev <bogdan993000@gmail.com>

--- a/server.conf
+++ b/server.conf
@@ -198,7 +198,7 @@ keepalive 10 120
 # a copy of this key.
 # The second parameter should be '0'
 # on the server and '1' on the clients.
-tls-auth ta.key 0 # This file is secret
+tls-crypt /vpn/ta.key 0 # This file is secret
 
 # Select a cryptographic cipher.
 # This config item must be copied to
@@ -273,3 +273,6 @@ explicit-exit-notify 1
 
 
 topology subnet
+
+mode server
+tls-server
