--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args: 
         CA_PASS: ${CA_PASS}
     ports:
-      - "1194:1194"
+      - "1194:1194/udp"
     volumes:
       - ${PWD}/clients:/vpn/clients
     cap_add:
