Refactor direcory structure
Signed-off-by: Bogdan Shchogolev <bogdan993000@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   dockervpn:
     build: 
-      context: .
+      context: ./src
       args: 
         CA_PASS: ${CA_PASS}
     ports:
