Refactored PKI management
PKI no longer embeded into image.
Now pki is initialised on firs run of the container and can be reset
using "reset_pki.sh" script.

Signed-off-by: Bogdan Shchogolev <bogdan993000@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,11 @@ services:
   dockervpn:
     build: 
       context: ./src
-      args: 
-        CA_PASS: ${CA_PASS}
     ports:
       - "1194:1194/udp"
     volumes:
       - ${PWD}/clients:/vpn/clients
+      - ${PWD}/pki:/vpn/pki
     cap_add:
       - NET_ADMIN
     devices:
