--- a/src/vpn/conf_templates/server.conf
+++ b/src/vpn/conf_templates/server.conf
@@ -46,7 +46,7 @@ key /vpn/pki/private/dockervpn.key  # This file should be kept secret
 # Diffie hellman parameters.
 # Generate your own with:
 #   openssl dhparam -out dh2048.pem 2048
-dh dh.pem
+dh /vpn/pki/dh.pem
 
 # Configure server mode and supply a VPN subnet
 # for OpenVPN to draw client addresses from.
@@ -198,7 +198,7 @@ keepalive 10 120
 # a copy of this key.
 # The second parameter should be '0'
 # on the server and '1' on the clients.
-tls-crypt /vpn/ta.key 0 # This file is secret
+tls-crypt /vpn/pki/ta.key 0 # This file is secret
 
 # Select a cryptographic cipher.
 # This config item must be copied to
@@ -241,7 +241,7 @@ persist-tun
 # Output a short status file showing
 # current connections, truncated
 # and rewritten every minute.
-status openvpn-status.log
+status /shared/openvpn-status.log
 
 # By default, log messages will go to the syslog (or
 # on Windows, if running as a service, they will go to
@@ -276,3 +276,4 @@ topology subnet
 
 mode server
 tls-server
+auth SHA256
