Implement static IP assigment for dns and added dns pushes to config
Signed-off-by: Bogdan Shchogolev <bogdan993000@gmail.com>

--- a/src/vpn/Dockerfile
+++ b/src/vpn/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /vpn
 
 COPY scripts/* /vpn/scripts/
 COPY conf_templates/server.conf /vpn/server.conf
+COPY ccd/* /vpn/ccd/
 
 RUN apk add openvpn easy-rsa &&\
 sed -i 's/rm -rf \"\$EASYRSA_PKI\"/rm -rf \"\$EASYRSA_PKI\/\*\"/' /usr/share/easy-rsa/easyrsa
