--- a/src/vpn/conf_templates/server.conf
+++ b/src/vpn/conf_templates/server.conf
@@ -109,7 +109,7 @@ ifconfig-pool-persist ipp.txt
 # also has a small subnet behind his connecting
 # machine, such as 192.168.40.128/255.255.255.248.
 # First, uncomment out these lines:
-;client-config-dir ccd
+client-config-dir /vpn/ccd
 ;route 192.168.40.128 255.255.255.248
 # Then create a file ccd/Thelonious with this line:
 #   iroute 192.168.40.128 255.255.255.248
@@ -155,7 +155,7 @@ ifconfig-pool-persist ipp.txt
 # The addresses below refer to the public
 # DNS servers provided by opendns.com.
 ;push "dhcp-option DNS 208.67.222.222"
-;push "dhcp-option DNS 208.67.220.220"
+;p;ush "dhcp-option DNS 208.67.220.220"
 
 # Uncomment this directive to allow different
 # clients to be able to "see" each other.
@@ -277,3 +277,5 @@ topology subnet
 mode server
 tls-server
 auth SHA256
+
+push "dhcp-option DNS 10.14.88.100"
