Add domain placeholder to vpn config file
Signed-off-by: Bogdan Shchogolev <bogdan993000@gmail.com>

--- a/src/vpn/Dockerfile
+++ b/src/vpn/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:latest
 
+ARG DOMAIN
+
 WORKDIR /vpn
 
 COPY scripts/* /vpn/scripts/
@@ -7,7 +9,8 @@ COPY conf_templates/server.conf /vpn/server.conf
 COPY ccd/* /vpn/ccd/
 
 RUN apk add openvpn easy-rsa &&\
-sed -i 's/rm -rf \"\$EASYRSA_PKI\"/rm -rf \"\$EASYRSA_PKI\/\*\"/' /usr/share/easy-rsa/easyrsa
+sed -i 's/rm -rf \"\$EASYRSA_PKI\"/rm -rf \"\$EASYRSA_PKI\/\*\"/' /usr/share/easy-rsa/easyrsa &&\
+sed -i "s/__DOMAIN__/$DOMAIN/" /vpn/server.conf
 
 EXPOSE 1194/udp
 
