--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   dns:
+    restart: unless-stopped
     build:
       args:
         DOMAIN: $DOMAIN
@@ -15,6 +16,7 @@ services:
       - /dev/net/tun
 
   vpn:
+    restart: unless-stopped
     build: 
       args:
         DOMAIN: $DOMAIN
